--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.3"
+version = "0.1.4"
 description = ""
 authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
 packages = [
@@ -10,10 +10,12 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 prompt = "^0.4.1"
+numexpr = "^2.8.1"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:calc_games"
 
 [tool.poetry.dev-dependencies]
 
