--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.5"
+version = "0.1.6"
 description = ""
 authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
 packages = [
@@ -17,6 +17,7 @@ brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:calc_games"
 brain-gcd = "brain_games.scripts.brain_gcd:gcd_games"
+brain-progression = "brain_games.scripts.brain_progression:progression_games"
 
 [tool.poetry.dev-dependencies]
 
