--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.6"
+version = "0.1.7"
 description = ""
 authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
 packages = [
@@ -18,6 +18,7 @@ brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:calc_games"
 brain-gcd = "brain_games.scripts.brain_gcd:gcd_games"
 brain-progression = "brain_games.scripts.brain_progression:progression_games"
+brain-prime = "brain_games.scripts.brain_prime:prime_games"
 
 [tool.poetry.dev-dependencies]
 
