--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,19 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.2.2"
+version = "0.2.5"
 description = ""
 authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]
 packages = [
   { include = "brain_games" },
 ]
 repository = "<https://github.com/Trankvill/python-project-lvl1>"
+classifiers = [
+	"Topic :: Software Development :: Build Tools",
+   	"Topic :: Software Development :: Libraries :: Python Modules",
+	"Programming Language :: Python :: 3.8",
+	"Framework :: IPython",
+	"Operating System :: OS Ubuntu 22.04 LTS",
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -15,11 +22,11 @@ numexpr = "^2.8.1"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
-brain-even = "brain_games.scripts.brain_even:even_games"
-brain-calc = "brain_games.scripts.brain_calc:calc_games"
-brain-gcd = "brain_games.scripts.brain_gcd:gcd_games"
-brain-progression = "brain_games.scripts.brain_progression:progression_games"
-brain-prime = "brain_games.scripts.brain_prime:prime_games"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
 
 [tool.poetry.dev-dependencies]
 
