--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,10 @@ jobs:
       - name: Run linter and pytest
         run: |
           make lint
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.4
+        env:
+            CC_TEST_REPORTER_ID: d2a5826abdd8390f7e92cd479826c31f8804598b5175988ee06e0bdbe41da951
+        with:
+            coverageCommand: make test-coverage
+            debug: true
